RESOLVED FIXED219570
[WTF] fix SYSTEM_MALLOC build on non-Linux
https://bugs.webkit.org/show_bug.cgi?id=219570
Summary [WTF] fix SYSTEM_MALLOC build on non-Linux
Samuel Thibault
Reported 2020-12-05 15:41:18 PST
Created attachment 415502 [details] proposed fix Hello, In the SYSTEM_MALLOC case, only the Windows and Linux ports have an implementation for computeRAMSize. The attached patch adds a generic Unix one using sysconf.
Attachments
proposed fix (1.26 KB, text/plain)
2020-12-05 15:41 PST, Samuel Thibault
no flags
Patch (1.65 KB, patch)
2020-12-06 12:51 PST, Samuel Thibault
no flags
Samuel Thibault
Comment 1 2020-12-06 12:51:11 PST
EWS
Comment 2 2020-12-06 13:31:40 PST
Committed r270488: <https://trac.webkit.org/changeset/270488> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415524 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-06 13:32:15 PST
Note You need to log in before you can comment on or make changes to this bug.