[WTF] Add Unix-generic way of determining the available RAM https://bugs.webkit.org/show_bug.cgi?id=219570 sysconf(_SC_PHYS_PAGES) and sysconf(_SC_PAGE_SIZE) are a very generic way to get

Patch by Samuel Thibault <samuel.thibault@ens-lyon.org> on 2020-12-06
Reviewed by Fujii Hironori.

* wtf/RAMSize.cpp:
(WTF::computeRAMSize): Fallback to sysconf to determine RAM size.

Canonical link: https://commits.webkit.org/232165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270488 268f45cc-cd09-0410-ab3c-d52691b4dbfc