Source/WTF/wtf/RAMSize.cpp
@@ -33,7 +33,9 @@
 #elif defined(USE_SYSTEM_MALLOC) && USE_SYSTEM_MALLOC
 #if OS(LINUX)
 #include <sys/sysinfo.h>
-#endif // OS(LINUX)
+#elif OS(UNIX)
+#include <unistd.h>
+#endif // OS(LINUX) || OS(UNIX)
 #else
 #include <bmalloc/bmalloc.h>
 #endif
@@ -58,9 +60,13 @@ static size_t computeRAMSize()
     struct sysinfo si;
     sysinfo(&si);
     return si.totalram * si.mem_unit;
+#elif OS(UNIX)
+    long pages = sysconf(_SC_PHYS_PAGES);
+    long pageSize = sysconf(_SC_PAGE_SIZE);
+    return pages * pageSize;
 #else
 #error "Missing a platform specific way of determining the available RAM"
-#endif // OS(LINUX) || OS(FREEBSD)
+#endif // OS(LINUX) || OS(FREEBSD) || OS(UNIX)
 #else
     return bmalloc::api::availableMemory();
 #endif
